<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="170dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:cardCornerRadius="30dp"
    android:layout_margin="20dp"
    app:cardBackgroundColor="@color/color_principal2">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imagen_principal"
            android:layout_width="150dp"
            android:layout_height="match_parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:src="@drawable/logo_bandera"
            android:layout_margin="5dp"/>

        <TextView
            android:id="@+id/txt_name_farm"
            android:layout_width="150sp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/imagen_principal"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="@string/local_name"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="@color/black"
            />

        <TextView
            android:id="@+id/txt_local_direction"
            android:layout_width="150sp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/txt_name_farm"
            app:layout_constraintStart_toEndOf="@id/imagen_principal"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="@string/local_direction"
            android:layout_marginTop="5dp"
            android:textStyle="bold"
            android:textSize="14sp"
            android:textColor="@color/white"
            />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/linear_open_farm"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/txt_local_direction"
            app:layout_constraintStart_toEndOf="@id/imagen_principal"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Apertura:"
                android:layout_marginTop="5dp"
                android:textSize="14sp"
                android:textColor="@color/white"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/time_open_farm"
                android:layout_marginStart="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/time_open"
                android:layout_marginTop="5dp"
                android:textSize="14sp"
                android:textColor="@color/white"
                />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/linear_close_farm"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/linear_open_farm"
            app:layout_constraintStart_toEndOf="@id/imagen_principal"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Cierre:"
                android:layout_marginTop="5dp"
                android:textSize="14sp"
                android:textColor="@color/color_principal3"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/time_close_farm"
                android:layout_marginStart="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/time_close"
                android:layout_marginTop="5dp"
                android:textSize="14sp"
                android:textColor="@color/white"
                />

        </androidx.appcompat.widget.LinearLayoutCompat>


        <androidx.cardview.widget.CardView
            android:layout_width="112dp"
            android:layout_height="34dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="10dp"
            app:cardBackgroundColor="@color/color_principal1"
            app:cardCornerRadius="4dp"
            android:clickable="true"
            >
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="Número"
                    android:textSize="12sp"
                    android:textColor="@color/white"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"

                    />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>